src/test/deca/syntax/invalid/lexer/reserved_words_lex-lex.corr
ASM: [@0,196:198='asm',<25>,13:0]
CLASS: [@1,200:204='class',<26>,14:0]
EXTENDS: [@2,206:212='extends',<27>,15:0]
ELSE: [@3,214:217='else',<28>,16:0]
FALSE: [@4,219:223='false',<29>,17:0]
IF: [@5,225:226='if',<30>,18:0]
INSTANCEOF: [@6,228:237='instanceof',<31>,19:0]
NEW: [@7,239:241='new',<32>,20:0]
NULL: [@8,243:246='null',<33>,21:0]
READINT: [@9,248:254='readInt',<34>,22:0]
READFLOAT: [@10,256:264='readFloat',<35>,23:0]
PRINT: [@11,266:270='print',<36>,24:0]
PRINTLN: [@12,272:278='println',<37>,25:0]
PRINTLNX: [@13,280:287='printlnx',<38>,26:0]
PRINTX: [@14,289:294='printx',<39>,27:0]
PROTECTED: [@15,296:304='protected',<40>,28:0]
RETURN: [@16,306:311='return',<41>,29:0]
THIS: [@17,313:316='this',<42>,30:0]
TRUE: [@18,318:321='true',<43>,31:0]
WHILE: [@19,323:327='while',<44>,32:0]
ASM: [@20,347:349='asm',<25>,35:0]
ASM: [@21,351:353='asm',<25>,35:4]
IDENT: [@22,355:360='asmasm',<47>,36:0]
ASM: [@23,362:364='asm',<25>,37:0]
PLUS: [@24,365:365='+',<5>,37:3]
ASM: [@25,366:368='asm',<25>,37:4]
IDENT: [@26,370:376='elselse',<47>,38:0]
IDENT: [@27,378:380='els',<47>,39:0]
ELSE: [@28,382:385='else',<28>,39:4]
